--- a/public/friends.html
+++ b/public/friends.html
@@ -171,7 +171,7 @@
           <br><br>
         </div>
       </div>
-      <div class="col-lg-4" style="max-height:500px;overflow:scroll;margin: auto;">
+      <div class="col-lg-4" style="max-height:500px;overflow:scroll;">
         <div ng-repeat="x in nearbyPeople" >
           <h4 class="followingBarsList">{{x.name}}, {{x.age}}</h4>
           <h5 class="followingBarsList" ng-if="x.gender == 1">Male</h5>
